# suno

scripts/: build_android.sh  build_ios.sh
suno_app/: README.md  pubspec.yaml
suno_app/android/app/: build.gradle.kts
suno_app/android/app/src/main/: AndroidManifest.xml
suno_app/ios/Runner/: Info.plist
suno_app/ios/Runner.xcodeproj/: project.pbxproj
suno_app/lib/: main.dart
suno_app/lib/data/repositories/: settings_repository.dart
suno_app/lib/models/: language.dart  translation_result.dart
suno_app/lib/screens/home/: home_screen.dart  home_viewmodel.dart
suno_app/lib/screens/home/widgets/: audio_input_widget.dart  language_selector_widget.dart
suno_app/lib/screens/onboarding/: onboarding_screen.dart
suno_app/lib/screens/settings/: settings_screen.dart  settings_viewmodel.dart
suno_app/lib/screens/translation/: translation_screen.dart  translation_viewmodel.dart
suno_app/lib/screens/translation/widgets/: audio_visualizer_widget.dart  (+1 more)
suno_app/lib/services/: audio_service.dart  model_management_service.dart  permissions_service.dart  translation_service.dart
suno_app/lib/shared/widgets/: primary_button.dart
suno_app/lib/theme/: app_colors.dart  app_text_styles.dart  app_theme.dart
suno_app/linux/: CMakeLists.txt
suno_app/linux/runner/: my_application.cc
suno_app/macos/Runner.xcodeproj/: project.pbxproj
suno_app/macos/Runner/Configs/: AppInfo.xcconfig
suno_app/web/: index.html  manifest.json
suno_app/windows/: CMakeLists.txt
suno_app/windows/runner/: Runner.rc  main.cpp
suno_core/: Cargo.toml
suno_core/src/: api.rs
(+2 files in other folders)
