[package]
name = "suno_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bindgen = "0.72.0"
cbindgen = "0.29.0"
oslog = "0.2.0"
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"

anyhow = "1.0.98"
bincode = "2.0.1"
candle-core = { version = "0.9.1", features = ["metal", "cuda"] }
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
crossbeam = "0.8.4"
futures = "0.3.31"
hf-hub = "0.4.3"
libc = "0.2.174"
ndk = "0.9.0"
once_cell = "1.21.3"
rtrb = "0.3.2"
rubato = "0.16.2"
safer-ffi = "0.1.13"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokenizers = "0.21.2"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
